캘린더 추가

--- a/app/src/main/res/layout/fragment_month.xml
+++ b/app/src/main/res/layout/fragment_month.xml
@@ -5,10 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".MonthFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <CalendarView
+        android:id="@+id/calView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="MonthFragment" />
+        android:layout_height="wrap_content" />
 
 </FrameLayout>
