--- a/app/src/main/res/layout/fragment_closing.xml
+++ b/app/src/main/res/layout/fragment_closing.xml
@@ -10,21 +10,21 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_contet"
+        android:layout_height="wrap_content"
         android:text="이번달 예산 설정"
-        android:layout_weigth="1"/>
+        android:layout_weight="1"/>
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_contet"
+        android:layout_height="wrap_content"
         android:text="결산"
-        android:layout_weigth="2"/>
+        android:layout_weight="2"/>
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_contet"
+        android:layout_height="wrap_content"
         android:text="총수입/총지출"
-        android:layout_weigth="1"/>
+        android:layout_weight="1"/>
 
 
 </LinearLayout>
