--- a/app/src/main/res/layout/activity_day_input.xml
+++ b/app/src/main/res/layout/activity_day_input.xml
@@ -77,7 +77,7 @@
         android:gravity="right"
         android:paddingTop="30dp">
         <Button
-            android:id="@+id/btnAdd"
+            android:id="@+id/btnInput"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="입력"/>
