--- a/app/src/main/res/layout/fragment_day.xml
+++ b/app/src/main/res/layout/fragment_day.xml
@@ -9,6 +9,14 @@
     android:paddingLeft="30dp"
     tools:context=".DayFragment">
 
+    <com.harrywhewell.scrolldatepicker.DayScrollDatePicker
+        android:id="@+id/dayDate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -33,10 +41,5 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="내역 추가"/>
-
     </LinearLayout>
-
-
-
-
 </LinearLayout>
