--- a/app/src/main/res/layout/fragment_closing.xml
+++ b/app/src/main/res/layout/fragment_closing.xml
@@ -6,25 +6,34 @@
     android:orientation="vertical"
     tools:context=".ClosingFragment">
 
-    <!-- TODO: Update blank fragment layout -->
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="이번달 예산 설정"
-        android:layout_weight="1"/>
+        android:layout_height="match_parent"
+        android:paddingTop="?attr/actionBarSize"
+        android:orientation="vertical">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="결산"
-        android:layout_weight="2"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="이번달 예산 설정"
+            android:layout_weight="1"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="총수입/총지출"
-        android:layout_weight="1"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="결산"
+            android:layout_weight="2"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="총수입/총지출"
+            android:layout_weight="1"/>
+
+    </LinearLayout>
+
+
 
 
 </LinearLayout>
