--- a/app/src/main/res/layout/fragment_month.xml
+++ b/app/src/main/res/layout/fragment_month.xml
@@ -5,9 +5,17 @@
     android:layout_height="match_parent"
     tools:context=".MonthFragment">
 
-    <CalendarView
-        android:id="@+id/calView"
+
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:paddingTop="?attr/actionBarSize">
+        <CalendarView
+            android:id="@+id/calView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
 
 </FrameLayout>
