주간달력(다른 형태)

--- a/app/src/main/res/layout/fragment_day.xml
+++ b/app/src/main/res/layout/fragment_day.xml
@@ -9,13 +9,22 @@
     android:paddingLeft="30dp"
     tools:context=".DayFragment">
 
-    <com.harrywhewell.scrolldatepicker.DayScrollDatePicker
-        android:id="@+id/dayDate"
+    <devs.mulham.horizontalcalendar.HorizontalCalendarView
+        android:id="@+id/HCalendar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:background="#FFE400"
+        app:textColorNormal="#FFFFFF"
+        app:selectorColor="#86E57F"
+        app:textColorSelected="#86E57F"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="30dp"
+        android:textSize="25sp"
+        android:id="@+id/calTextView"/>
 
     <LinearLayout
         android:layout_width="match_parent"
