--- a/app/src/main/res/layout/fragment_day.xml
+++ b/app/src/main/res/layout/fragment_day.xml
@@ -13,10 +13,10 @@
         android:id="@+id/HCalendar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#FFE400"
-        app:textColorNormal="#FFFFFF"
-        app:selectorColor="#86E57F"
-        app:textColorSelected="#86E57F"/>
+        android:background="#FFFFFF"
+        app:textColorNormal="#A6A6A6"
+        app:selectorColor="#E185A5"
+        app:textColorSelected="#E185A5"/>
 
     <TextView
         android:layout_width="wrap_content"
