--- a/app/src/main/res/layout/fragment_day.xml
+++ b/app/src/main/res/layout/fragment_day.xml
@@ -9,10 +9,20 @@
     android:paddingLeft="30dp"
     tools:context=".DayFragment">
 
+
+    <com.harrywhewell.scrolldatepicker.DayScrollDatePicker
+        android:paddingTop="?attr/actionBarSize"
+        android:id="@+id/dayDate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="15"
+        android:layout_weight="10"
         android:orientation="vertical">
         <ScrollView
             android:layout_width="match_parent"
