--- a/app/src/main/res/layout/fragment_stat.xml
+++ b/app/src/main/res/layout/fragment_stat.xml
@@ -6,10 +6,14 @@
     tools:context=".StatFragment">
 
     <!-- TODO: Update blank fragment layout -->
-
-    <com.github.mikephil.charting.charts.PieChart
-        android:id="@+id/chart"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="350dp" />
+        android:layout_height="match_parent"
+        android:paddingTop="?attr/actionBarSize">
+        <com.github.mikephil.charting.charts.PieChart
+            android:id="@+id/chart"
+            android:layout_width="match_parent"
+            android:layout_height="350dp" />
+    </LinearLayout>
 
 </FrameLayout>
