--- a/app/src/main/res/layout/fragment_day.xml
+++ b/app/src/main/res/layout/fragment_day.xml
@@ -5,26 +5,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingRight="30dp"
-    android:paddingLeft="30dp"
     tools:context=".DayFragment">
+
+    <include layout="@layout/toolbar"/>
 
     <devs.mulham.horizontalcalendar.HorizontalCalendarView
         android:id="@+id/HCalendar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="103dp"
         android:background="#FFFFFF"
-        app:textColorNormal="#A6A6A6"
         app:selectorColor="#E185A5"
-        app:textColorSelected="#E185A5"/>
+        app:textColorNormal="#A6A6A6"
+        app:textColorSelected="#E185A5" />
 
     <TextView
+        android:id="@+id/calTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
-        android:textSize="25sp"
-        android:id="@+id/calTextView"/>
+        android:textSize="25sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -41,6 +41,7 @@
                 android:id="@+id/list"/>
         </ScrollView>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -51,4 +52,5 @@
             android:layout_height="wrap_content"
             android:text="내역 추가"/>
     </LinearLayout>
+
 </LinearLayout>
