아이콘 이미지

--- a/app/src/main/res/layout/activity_pig_bank.xml
+++ b/app/src/main/res/layout/activity_pig_bank.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".PigBank">
 
     <androidx.appcompat.widget.Toolbar
@@ -18,4 +19,31 @@
         app:titleTextColor="@color/white">
     </androidx.appcompat.widget.Toolbar>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:id="@+id/pigImage"
+            android:layout_width="match_parent"
+            android:layout_height="500dp"
+            android:paddingRight="30dp"
+            android:paddingLeft="30dp"
+            android:src="@drawable/pig"/>
+        <TextView
+            android:id="@+id/nameText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="회원이름"
+            android:textSize="20sp"/>
+        <TextView
+            android:id="@+id/totalText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="총저축액: "
+            android:textSize="20sp"/>
+    </LinearLayout>
+
+</LinearLayout>
