--- a/app/src/main/res/layout/fragment_stat.xml
+++ b/app/src/main/res/layout/fragment_stat.xml
@@ -13,7 +13,7 @@
         <com.github.mikephil.charting.charts.PieChart
             android:id="@+id/chart"
             android:layout_width="match_parent"
-            android:layout_height="350dp" />
+            android:layout_height="match_parent" />
     </LinearLayout>
 
 </FrameLayout>
