--- a/app/src/main/res/layout/activity_pig_bank.xml
+++ b/app/src/main/res/layout/activity_pig_bank.xml
@@ -29,21 +29,24 @@
             android:layout_height="500dp"
             android:paddingRight="30dp"
             android:paddingLeft="30dp"
-            android:src="@drawable/pig"/>
+            android:scaleType="centerCrop"
+            android:src="@drawable/pigcha1"/>
         <TextView
             android:id="@+id/nameText"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:gravity="center"
             android:text="회원이름"
             android:textSize="20sp"/>
+
         <TextView
             android:id="@+id/totalText"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:gravity="center"
             android:text="총저축액: "
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
+
     </LinearLayout>
 
 </LinearLayout>
