--- a/app/src/main/res/layout/fragment_closing.xml
+++ b/app/src/main/res/layout/fragment_closing.xml
@@ -16,7 +16,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="이번달 예산 설정"
+            android:text="목표 지출액 설정"
             android:layout_weight="1"/>
 
         <TextView
