--- a/app/src/main/res/layout/activity_day_input.xml
+++ b/app/src/main/res/layout/activity_day_input.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:paddingTop="30dp">
         <RadioGroup
+            android:id="@+id/differ"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
