--- a/app/src/main/res/layout/fragment_day.xml
+++ b/app/src/main/res/layout/fragment_day.xml
@@ -20,8 +20,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1">
+        android:layout_height="0dp"
+        android:layout_weight="1.5">
         <Button
             android:id="@+id/addBtn"
             android:layout_width="match_parent"
@@ -30,18 +30,21 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/calView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_weight="15"
         android:orientation="vertical">
+
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="421dp">
+
             <LinearLayout
+                android:id="@+id/list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:id="@+id/list"/>
+                android:orientation="vertical" />
         </ScrollView>
     </LinearLayout>
 
