--- a/app/src/main/res/layout/activity_day_input.xml
+++ b/app/src/main/res/layout/activity_day_input.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:paddingTop="30dp">
         <RadioGroup
-            android:id="@+id/differ"
+            android:id="@+id/rg_acc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -75,12 +75,20 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="right"
-        android:paddingTop="30dp">
+        android:gravity="center"
+        android:paddingTop="30dp"
+        android:paddingBottom="30dp">
+        <Button
+            android:id="@+id/btnCancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
+            android:text="취소"/>
         <Button
             android:id="@+id/btnInput"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
             android:text="입력"/>
     </LinearLayout>
 
