결산, 돼지 수정

--- a/app/src/main/res/layout/activity_pig_bank.xml
+++ b/app/src/main/res/layout/activity_pig_bank.xml
@@ -22,30 +22,65 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:id="@+id/pigImage"
-            android:layout_width="match_parent"
-            android:layout_height="500dp"
-            android:paddingRight="30dp"
-            android:paddingLeft="30dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/pigcha1"/>
-        <TextView
-            android:id="@+id/nameText"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:gravity="center"
-            android:text="회원이름"
-            android:textSize="20sp"/>
+        android:layout_height="wrap_content"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp">
 
-        <TextView
-            android:id="@+id/totalText"
+        <LinearLayout
+            android:layout_weight="8"
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:gravity="center"
-            android:text="총저축액: "
-            android:textSize="20sp" />
+            android:layout_height="0dp">
+            <ImageView
+                android:id="@+id/pigImage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingRight="30dp"
+                android:paddingLeft="30dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/pigcha1"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="0dp">
+            <Button
+                android:id="@+id/pushAlbum"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:text="앨범보기"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="0dp">
+            <TextView
+                android:id="@+id/nameText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="회원이름"
+                android:textSize="20sp"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="0dp">
+            <TextView
+                android:id="@+id/totalText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="총저축액: "
+                android:textSize="20sp" />
+        </LinearLayout>
 
     </LinearLayout>
 
