--- a/app/src/main/res/layout/fragment_closing.xml
+++ b/app/src/main/res/layout/fragment_closing.xml
@@ -27,14 +27,24 @@
                 android:layout_gravity="center"
                 android:text="이번 달 목표 지출액을 입력하세요 "
                 android:textSize="20dp"/>
-            <EditText
-                android:layout_weight="0.7"
-                android:id="@+id/goalText"
+
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:textSize="25dp"
-                android:textColor="#000000"/>
+                android:orientation="horizontal">
+                <EditText
+                    android:id="@+id/goalText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="25dp"
+                    android:textColor="#000000"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="원"
+                    android:textSize="20dp"/>
+            </LinearLayout>
             <Button
                 android:layout_weight="0.6"
                 android:id="@+id/goalBtn"
