--- a/app/src/main/res/layout/activity_pig_bank.xml
+++ b/app/src/main/res/layout/activity_pig_bank.xml
@@ -15,8 +15,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:title="@string/app_name"
-        app:titleTextColor="@color/white">
+        app:title=" ">
     </androidx.appcompat.widget.Toolbar>
 
     <LinearLayout
