--- a/app/src/main/res/layout/history.xml
+++ b/app/src/main/res/layout/history.xml
@@ -8,7 +8,10 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="7dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
         app:cardCornerRadius="5dp"
         app:cardElevation="10dp">
         <LinearLayout
@@ -17,25 +20,26 @@
             android:padding="15dp">
             <TextView
                 android:id="@+id/tvClass"
-                android:layout_width="wrap_content"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:text="항목"
-                android:textSize="20dp"/>
+                android:textSize="13dp"
+                android:textColor="#E185A5"
+                android:textStyle="bold"/>
             <TextView
                 android:id="@+id/tvContent"
-                android:layout_width="wrap_content"
+                android:layout_width="180dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:text="내용"
-                android:textSize="20dp"/>
+                android:textSize="15dp"
+                android:textStyle="bold"/>
             <TextView
                 android:id="@+id/tvMoney"
-                android:layout_width="wrap_content"
+                android:layout_width="80dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="2"
                 android:text="금액"
-                android:textSize="20dp"/>
+                android:textSize="15dp"
+                android:gravity="right"/>
 
         </LinearLayout>
 
