--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.GURU_Pig" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        supportActionBar?.setDisplayShowTitleEnabled(false)
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/Guru_pink</item>
         <item name="colorPrimaryVariant">@color/Guru_pink</item>
