--- a/app/src/main/res/layout/fragment_closing.xml
+++ b/app/src/main/res/layout/fragment_closing.xml
@@ -38,7 +38,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="25dp"
-                    android:textColor="#000000"/>
+                    android:textColor="#000000"
+                    android:inputType="number"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -50,7 +51,7 @@
                 android:id="@+id/goalBtn"
                 android:layout_width="70dp"
                 android:layout_height="0dp"
-                android:text="완료"
+                android:text="입력"
                 android:layout_gravity="right"/>
         </LinearLayout>
 
