--- a/app/src/main/res/layout/history.xml
+++ b/app/src/main/res/layout/history.xml
@@ -28,7 +28,7 @@
                 android:textStyle="bold"/>
             <TextView
                 android:id="@+id/tvContent"
-                android:layout_width="180dp"
+                android:layout_width="160dp"
                 android:layout_height="wrap_content"
                 android:text="내용"
                 android:textSize="15dp"
@@ -38,6 +38,12 @@
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:text="금액"
+                android:textSize="15dp"
+                android:gravity="right"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="원"
                 android:textSize="15dp"
                 android:gravity="right"/>
 
